--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - aws-cli/setup:
           role_arn: ${AWS_ROLE_ARN}
-          aws-region: ${AWS_REGION}
+          aws_region: ${AWS_REGION}
       - terraform/init:
           backend: true
           path: ./terraform
