--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
 #    docker:
 #      - image: cimg/aws:2023.06
     steps:
-      - checkout:
+      - checkout
       - aws-cli/setup:
           role_arn: ${AWS_ROLE_ARN}
           aws_region: ${AWS_REGION}
