--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - checkout
       - aws-cli/setup:
           role_arn: ${AWS_ROLE_ARN}
-          aws_region: ${AWS_REGION}
+          region: ${AWS_REGION}
 #      - terraform/install:
       - terraform/fmt:
           path: ./terraform
